Se agrega nombre del estudiante.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
      <title>Pruecto U_Remington</title>
 
      <!-- Profe, en esta parte del desarrollo se realiza la creación de los archivos solicitados y se hace parte de la funcionalidad requerida, si le da click en cada opción del navBar le debería permitir realizar las acciones correspondientes. -->
+
+     <!-- Estudiante: Stiven Casas Henao -->
+
 </head>
 <body>
     <nav>
